force-app/main/default/objects/COMM_ProductSetting__c/COMM_ProductSetting__c.object-meta.xml
<CustomObject>
    <label>Product Setting</label>
    <nameField>
        <label>Product Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>