force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_CommerceEssential__c.field-meta.xml
<CustomField>
    <fullName>COMM_CommerceEssential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commerce Essential?</label>
    <type>Checkbox</type>
</CustomField>