force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_CommerceMappingAttribute__c.field-meta.xml
<CustomField>
    <fullName>COMM_CommerceMappingAttribute__c</fullName>
    <label>Commerce Mapping Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>