force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_CoreEssential__c.field-meta.xml
<CustomField>
    <fullName>COMM_CoreEssential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core Essential?</label>
    <type>Checkbox</type>
</CustomField>