force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_EligibleProductType__c.field-meta.xml
<CustomField>
    <fullName>COMM_EligibleProductType__c</fullName>
    <label>Eligible Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>