force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>COMM_FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>