force-app/main/default/objects/COMM_ProductSetting__c/fields/COMM_FieldName__c.field-meta.xml
<CustomField>
    <fullName>COMM_FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>